[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "flexce"
version = "1.0.01"
dependencies = [
  "scipy",
  "numpy",
  "astropy",
]
requires-python = ">=3.9"
#requires-python = ">=3.11"
authors = [
  {name = "Brett Andrews", email = "brett.h.andrews@gmail.com"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "Flexible Galactic Chemical Evolution Model"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["chemical evolution","abundances"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://flexce.readthedocs.org"
Repository = "https://github.com/dnidever/flexce"
#Issues = "https://github.com/dnidever/flexce/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
